fix(site): very thin margin on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  padding: 0% 20%;
+  padding: 0vw 25vw;
   margin: 0%;
   line-height: 1.6;
   min-height: 95vh;
@@ -38,7 +38,7 @@ a {
   }
 
   body {
-    padding: 1% 5%;
+    padding: 0vw 7.5vw;
   }
 }
 
@@ -49,6 +49,6 @@ a {
   }
 
   body {
-    padding: 1% 10%;
+    padding: 0vw 10vw;
   }
 }
